--- a/root/src/app/components/chat/chat.html
+++ b/root/src/app/components/chat/chat.html
@@ -1,26 +1,46 @@
+ 
+ 
  @if(show){
  <div class="w-40 border-blue-950 bg-white rounded-xl" >
-  <div class="flex flex-col gap-2 p-4 max-h-[400px] overflow-y-auto">
+  <div #chatContainer class="flex flex-col gap-2 p-4 max-h-[400px] overflow-y-auto">
+
   <div *ngFor="let m of messages"
-       class="bg-blue-700 text-white px-4 py-2 rounded-xl max-w-[70%] w-fit break-words whitespace-pre-wrap">
-    {{ m }}
+       [ngClass]="{
+         'self-end bg-blue-700 text-white': m.senderName === user?.userName,
+         'self-start bg-gray-300 text-black': m.senderName !== user?.userName
+       }"
+       class="px-4 py-2 rounded-xl max-w-[70%] w-fit break-words whitespace-pre-wrap">
+
+    <small class="block text-xs opacity-70">{{ m.senderName }}</small>
+    <p class="text-sm">
+      {{ m.message }}
+    </p>
+
   </div>
+
 </div>
 
 
+
 <form  #myForm="ngForm" (ngSubmit)="onSubmit(myForm)">
-   <input type="text" class="form-control" id="msg" name="msg" placeholder="Enter message" required [(ngModel)]="message">
-   <button class=" bg-slate-500 text-green-500 rounded-2xl "  type="submit" [disabled]="!myForm.form.valid" >
+   <input type="text" class="form-control" id="msg" name="msg" placeholder="Enter message" required [(ngModel)]="message" class="border-blue-700" >
+   <button class=" bg-purple-500 text-black border border-blue-800 rounded-2xl m-1 p-1"  type="submit" [disabled]="!myForm.form.valid" >
      Save Message
    </button>
 </form>
-        <button (click)="formShow()" >
+        <button (click)="formShow()" class="bg-blue-400 rounded-lg m-1 p-1 border border-black" >
         Close chat
+      </button>
+      <button (click)="socketDisconnect()" class="bg-red-400 border border-black rounded-lg m-1 p-1" >
+        Disconnect
+      </button>
+      <button (click)="socketConnect()" class="bg-green-600 border border-black rounded-lg m-1 p-1" >
+        Connect
       </button>
 </div>
  }
  @else{
-      <button (click)="formShow()" class="bg-red-400 text-black rounded-2xl" >
+      <button (click)="formShow()" class="bg-red-400 text-black rounded-2xl border border-black" >
         Need Help?
       </button>
  }
