--- a/root/src/app/components/chat/chat.html
+++ b/root/src/app/components/chat/chat.html
@@ -21,7 +21,7 @@
 
       <!-- Messages container -->
       <div #chatContainer class="flex flex-col gap-3 p-4 max-h-80 overflow-y-auto">
-        <div *ngFor="let m of messages"
+        <div  *ngFor="let m of messages"
              [ngClass]="{
                'self-end': m.senderName === user?.userName,
                'self-start': m.senderName !== user?.userName
@@ -35,7 +35,7 @@
                    'bg-gradient-to-r from-blue-600 to-cyan-500': m.senderName === user?.userName,
                    'bg-gradient-to-r from-gray-600 to-gray-500': m.senderName !== user?.userName
                  }"></div>
-            <div class="relative px-4 py-3 rounded-xl"
+            <div #msssg class="relative px-4 py-3 rounded-xl"
                  [class]="{
                    'bg-gradient-to-r from-blue-600 to-cyan-500': m.senderName === user?.userName,
                    'bg-gray-800/80 border border-gray-700/50': m.senderName !== user?.userName
@@ -45,7 +45,7 @@
                        'text-blue-200': m.senderName === user?.userName,
                        'text-gray-400': m.senderName !== user?.userName
                      }">
-                {{ m.senderName }}
+                {{ m.senderName | slice:0:m.senderName.indexOf('@') }}   -  {{ m.createdAt | date:'dd MMM yyyy, hh:mm a' }}
               </small>
               <p class="text-sm break-words whitespace-pre-wrap"
                  [class]="{
