Ui rendering issue and task timer issue is solved

--- a/root/src/app/components/home/home.html
+++ b/root/src/app/components/home/home.html
@@ -7,7 +7,7 @@
       </svg>
     </div>
     <h1 class="text-white text-xl md:text-2xl font-bold bg-gradient-to-r from-white to-blue-100 bg-clip-text text-transparent">
-      Welcome back, <span class="animate-pulse text-black">{{ loggedName }}</span>
+      Welcome back, <span class="animate-pulse text-black">{{ loggedName() }}</span>
     </h1>
   </div>
   
@@ -133,6 +133,8 @@
       </div>
     </div>
   </div>
+
+  
 
   <!-- Projects Section - Centered -->
   <div class="lg:ml-72 max-w-7xl mx-auto px-4">
